--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img class="img-fluid rounded-circle" src="Imagenes/_WIP0403 mai cali.jpg" alt="imagencalza"/></div>
+                        <div class="p-5"><img class="img-fluid rounded-circle" src="Imagenes/IMG_8649.jpg" alt="imagen calza"/></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
@@ -80,7 +80,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img class="img-fluid rounded-circle" src="Imagenes/_WIP9355 turquish.jpg" alt="Camper de Jean"/></div>
+                        <div class="p-5"><img class="img-fluid rounded-circle" src="Imagenes/_WIP9355 turquish.jpg" alt="campera de Jean"/></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
