--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">For those about to rock...</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                            <h2 class="display-4">CALZA FOIL</h2>
+                            <p>Salpicá tu estilo de colores!</p>
                         </div>
                     </div>
                 </div>
@@ -68,8 +68,8 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="p-5">
-                            <h2 class="display-4">We salute you!</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                            <h2 class="display-4">TOP NEÓN</h2>
+                            <p>Enciende tu brillo interior.</p>
                         </div>
                     </div>
                 </div>
@@ -80,12 +80,12 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img class="img-fluid rounded-circle" src="Imagenes/IMG_8628.jpg" alt="campera de Jean"/></div>
+                        <div class="p-5"><img class="img-fluid rounded-circle" src="Imagenes/IMG_8686.jpg" alt="campera de Jean"/></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">Let there be rock!</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                            <h2 class="display-4">CAMPERA FLUIR</h2>
+                            <p>“Aceptar lo que llega, dejar ir lo que se va”</p>
                         </div>
                     </div>
                 </div>
