--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
             </div>
         </section>
          <!-- Content section 4-->
-        <section>
+         <section>
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
-                    <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img class="img-fluid rounded-circle" src="Imagenes/IMG_8730.jpg" alt="campera de Jean"/></div>
+                    <div class="col-lg-6">
+                        <div class="p-5"><img class="img-fluid rounded-circle" src="Imagenes/IMG_8730.jpg" alt="campera de jean"/></div>
                     </div>
-                    <div class="col-lg-6 order-lg-1">
+                    <div class="col-lg-6">
                         <div class="p-5">
                             <h2 class="display-4">CAMPERA COLOREARTE</h2>
                             <p>“El mejor color es el que luce bien en vos”</p>
@@ -106,23 +106,23 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>        
         <!-- Content section 5-->
         <section>
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img class="img-fluid rounded-circle" src="Imagenes/IMG_8613.jpg" alt="campera de Jean"/></div>
+                        <div class="p-5"><img class="img-fluid rounded-circle" src="Imagenes/IMG_8613.jpg" alt="TOP STAR 2.0"/></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">CAMPERA FLUIR</h2>
-                            <p> TOP STAR 2.0 ~ CAPRI METAL ZEBRA ~ CALZA SPARK</p>
+                            <h2 class="display-4">TOP STAR 2.0 </h2>
+                            <p>“Aceptar lo que llega, dejar ir lo que se va”</p>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </section>     
         <!-- Footer-->
         <footer class="py-5 bg-black">
             <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; Your Website 2021</p></div>
